More Search Page Bug fixes

--- a/src/scss/enhance/_search.scss
+++ b/src/scss/enhance/_search.scss
@@ -81,6 +81,14 @@ div.gsc-cursor-page.gsc-cursor-current-page {
     border-bottom: 1px solid #ccc !important;
 }
 
+form.gsc-search-box.gsc-search-box-tools {
+    display: block !important;
+}
+
+form#cse-search-box {
+    display: none;
+}
+
 .search {
 	// background: tomato;
 
