Another search page fix

--- a/src/scss/enhance/_search.scss
+++ b/src/scss/enhance/_search.scss
@@ -89,6 +89,10 @@ form#cse-search-box {
     display: none;
 }
 
+.gsc-control-wrapper-cse {
+    visibility: visible !important;
+}
+
 .search {
 	// background: tomato;
 
