Removed image tab on search page

--- a/src/scss/enhance/_search.scss
+++ b/src/scss/enhance/_search.scss
@@ -93,6 +93,10 @@ form#cse-search-box {
     visibility: visible !important;
 }
 
+.gsc-tabHeader.gsc-tabhInactive.gsc-inline-block {
+    display: none;
+}
+
 .search {
 	// background: tomato;
 
