carousel in a good place

--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -39,7 +39,7 @@
 "modules/news",
 // "modules/search",
 "modules/social-media",
-// "modules/moving-picture",
+"modules/moving-picture",
 "modules/section--home",
 "modules/pikaday",
 
