--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -26,7 +26,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 
     .js .close-btn,
     .global__toolbox__close-btn
-    {display:none;}
+    {display:none !important;}
 
     </style>
 
