--- a/src/scss/modules/_flickity-custom.scss
+++ b/src/scss/modules/_flickity-custom.scss
@@ -1,10 +1,43 @@
 .flickity {
   background: #FAFAFA;
-  width: 80%;
+  // width: 80%;
   margin: auto;
   min-width: 320px;
-  max-width: 1200px;
+  // max-width: 1200px;
   // height: 200px;
+}
+
+.flickity--cell {
+    visibility: hidden;
+}
+
+.flickity-enabled .flickity--cell {
+    visibility: visible;
+}
+
+// .is-selected {
+//     z-index: 1;
+// }
+
+.ratio-box {
+    position: relative;
+    height: 0;
+    display: block;
+    width: 100%;
+    /* padding-bottom is calculated and rendered in to HTML */
+    padding-bottom: 50%;
+
+    @include respond-min(830px){
+        padding-bottom: 56.25%;
+    }
+}
+.ratio-box > * {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
 .lazyload {
@@ -24,10 +57,10 @@
 }
 
 .flickity--cell {
-  width: 55%;
+  width: 100%;
   // height: 200px;
-  margin-right: 10px;
   background: #333;
+  overflow: hidden;
 }
 
 .flickity--cell img {
@@ -37,21 +70,6 @@
   max-width: 100%;
 }
 
-
-
-.flickity--cell {
-    // width: 100%;
-    // overflow: hidden;
-    // background-color: tomato;
-}
-
-// .flickity .flickity--cell {
-//     visibility: hidden;
-// }
-
-// .flickity-enabled .flickity--cell {
-//     visibility: visible;
-// }
 
 /* buttons, no circle */
 .flickity-prev-next-button {
