--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -42,6 +42,25 @@ layout:default
 	</div>
 
 	<script>
+	    //load picturefill, if no respimage support
+	    function loadJS(u) {
+	        var r = document.getElementsByTagName("script")[0],
+	            s = document.createElement("script");
+	        s.src = u;
+	        r.parentNode.insertBefore(s, r);
+	    }
+
+	    if (!window.HTMLPictureElement) {
+	        document.createElement('picture');
+	        //generating the config array
+	        window.picturefillCFG = window.picturefillCFG || [];
+	        picturefillCFG.push(["algorithm", "saveData"]);
+
+	        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.0-beta1/picturefill.min.js");
+	    }
+	</script>
+
+	<script>
 	      var cb = function() {
 	        var l = document.createElement('link'); l.rel = 'stylesheet';
 	        l.href = '/css/fizz.css';
