testing full-width

--- a/src/scss/modules/_flickity-custom.scss
+++ b/src/scss/modules/_flickity-custom.scss
@@ -15,9 +15,9 @@
     visibility: visible;
 }
 
-// .is-selected {
-//     z-index: 1;
-// }
+.is-selected {
+    z-index: 1;
+}
 
 .ratio-box {
     position: relative;
