--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -32,6 +32,7 @@ html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:1
 
     <style>
     body {margin: 0;}
+    .flickity--cell {width: 100%;}
     </style>
 
     {{!-- <link rel="stylesheet" type="text/css" href="/css/critical.css"> --}}
