--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -6,7 +6,7 @@ layout: default
 <div class="main js-animate">
 
     {{!-- {{> proof-points }} --}}
-    {{!-- {{> quotes }} --}}
+    {{> quotes }}
     {{!-- {{> collapsible }} --}}
     {{!-- <img src="//fillmurray.com/800/350">    --}}
 
