--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -37,11 +37,10 @@
 "modules/maps",
 "modules/calendar",
 "modules/news",
-// "modules/search",
+"modules/search",
 "modules/social-media",
 "modules/moving-picture",
 "modules/section--home",
-"modules/pikaday",
 
 "enhance/carousel",
 
