--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -49,10 +49,10 @@ layout:default
 	        picturefillCFG.push(["algorithm", "saveData"]);
 	        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.0-beta1/picturefill.min.js");
 	    };
-		// loadCSS("/css/fizz.css", document.getElementById("loadcss"));
-		loadJS("/js/bundle.js");
+		loadCSS("/css/bottom.css", document.getElementById("loadcss"));
+		loadJS("/js/shorts.js");
 		// loadCSS("https://cloud.typography.com/6664852/762926/css/fonts.css", document.getElementById("loadcss"));
 	</script>
-	<noscript><link href="https://cdn2.bethel.edu/css/fizz.css" rel="stylesheet" /></noscript>
+	<noscript><link href="https://cdn2.bethel.edu/css/bottom.css" rel="stylesheet" /></noscript>
 </body>
 </html>
