--- a/src/scss/bottom.scss
+++ b/src/scss/bottom.scss
@@ -4,23 +4,23 @@
 "variables",
 "mixins",
 
-"base/normalize",
-"base/base",
+// "base/normalize",
+// "base/base",
 "base/fluidity",
 "base/space",
 "base/tables",
 "base/forms",
 
-"typography/typography",
+// "typography/typography",
 
 "grid/flex-grid",
-"grid/layout",
+// "grid/layout",
 
-"global/header",
+// "global/header",
 "global/toolbox",
-"global/off-canvas--global",
-"global/navigation",
-"global/breadcrumb",
+// "global/off-canvas--global",
+// "global/navigation",
+// "global/breadcrumb",
 "global/footer",
 
 "school/school__navigation",
@@ -30,7 +30,7 @@
 "site/site__features",
 "site/site__image-bank",
 
-"page/page__title",
+// "page/page__title",
 "page/page--home",
 
 "modules/section--apply",
@@ -39,13 +39,13 @@
 "modules/news",
 "modules/search",
 "modules/social-media",
-"modules/moving-picture",
+// "modules/moving-picture",
 "modules/section--home",
 
 "enhance/carousel",
 
-"modules/flickity",
-"modules/flickity-custom",
+// "modules/flickity",
+// "modules/flickity-custom",
 
 "enhance/accordion",
 "enhance/animation",
