--- a/src/scss/enhance/_odometer.scss
+++ b/src/scss/enhance/_odometer.scss
@@ -1,6 +1,6 @@
 .odometer.odometer-auto-theme, .odometer.odometer-theme-default {
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: text-top;
   *vertical-align: auto;
   *zoom: 1;
   *display: inline;
