umm bunch of changes

--- a/src/scss/boots.scss
+++ b/src/scss/boots.scss
@@ -23,7 +23,7 @@
 // "global/breadcrumb",
 "global/footer",
 
-"school/school__navigation",
+// "school/school__navigation",
 
 "site/off-canvas--site",
 "site/site__title",
