--- a/src/scss/modules/_flickity-custom.scss
+++ b/src/scss/modules/_flickity-custom.scss
@@ -1,6 +1,6 @@
 .flickity {
     margin: auto;
-    background: transparent url(../assets/images/load.gif) no-repeat center;
+    background: transparent url(https://cdn4.bethel.edu/assets/images/load.gif) no-repeat center;
 }
 
 .flickity.flickity-enabled {
