--- a/src/templates/partials/global--school.hbs
+++ b/src/templates/partials/global--school.hbs
@@ -1,7 +1,7 @@
 <div class="global__toolbox" id="toolbox">
     <div class="inner">
 
-        <a class="global__toolbox__close-btn  btn  btn-small" id="js-globalNav-button--close" href="#top">✖ close</a>
+        <a class="mt1  global__toolbox__close-btn  btn  btn-small" id="js-globalNav-button--close" href="#top">✖ close</a>
 
         <nav class="global__navigation" role="navigation">
             <ul>
@@ -29,7 +29,7 @@
                <li><a href="#">Apply</a></li>
                <li><a href="#">Blink</a></li>
                <li><a href="#">Giving</a></li>
-               <li><a class="btn  btn-small">Search</a></li>
+               <li><a class="btn  btn-small  quick-links--search">Search</a></li>
            </ul>
 
 {{!--            <form action="//www.bethel.edu/search/" class="search" id="cse-search-box" target="_blank">
