--- a/src/templates/partials/proof-points.hbs
+++ b/src/templates/partials/proof-points.hbs
@@ -1,4 +1,5 @@
 <h2 class="uppercase-underlined">Highlights</h2>
+<div class="proof-point-collection">
 <div class="grid proof-points">
     <div class="grid-cell animate animate--fadeIn">
         <div class="grid-pad-1x">
@@ -26,4 +27,5 @@
             </div>
         </div>
     </div> --}}
+</div>
 </div>
