--- a/src/scss/enhance/_clean-up.scss
+++ b/src/scss/enhance/_clean-up.scss
@@ -1,5 +1,9 @@
-    .site__navigation,.burger,.site__title__button,
-    .accordion-list__button {visibility: visible !important;}
+.site__navigation,
+.burger,
+.site__title__button,
+.accordion-list__button {
+	visibility: visible !important;
+}
 
 @include respond-max($navToggle){
     .inner--content {
