--- a/src/scss/global/_navigation.scss
+++ b/src/scss/global/_navigation.scss
@@ -109,3 +109,11 @@
 .quick-links li a {
     color: #ccc;
 }
+
+.quick-links--search {
+    margin-top: 1em;
+
+    @include respond-min($navToggle){
+        margin-top: 0;
+    }
+}
