--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -5,10 +5,10 @@ layout: default
 
 <div class="main js-animate">
 
-    {{!-- {{> proof-points }} --}}
+    {{> proof-points }}
     {{> quotes }}
-    {{!-- {{> collapsible }} --}}
-    {{!-- <img src="//fillmurray.com/800/350">    --}}
+    {{> collapsible }}
+    <img src="//fillmurray.com/800/350">   
 
 
     <section class="grid-section">
