--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -7,7 +7,7 @@
         .site__navigation,
         .burger,
         .site__title__button,
-        .accordion-list__button {visibility: hidden !important;}
+        .accordion-list__button {visibility: hidden}
         @media (min-width: 49.99em){.global__toolbox__close-btn.btn-small {display: none;}}
     </style>
 
