quote carousel tweaks

--- a/src/scss/boots.scss
+++ b/src/scss/boots.scss
@@ -37,7 +37,6 @@
 "modules/maps",
 "modules/calendar",
 "modules/news",
-"modules/search",
 "modules/social-media",
 // "modules/moving-picture",
 "modules/section--home",
@@ -54,6 +53,7 @@
 "enhance/date-tag",
 "enhance/parallax",
 "enhance/proof-points",
+"enhance/search",
 "enhance/quotes",
 "enhance/svg-icons",
 "enhance/image-hover", 
