--- a/src/scss/enhance/_quotes.scss
+++ b/src/scss/enhance/_quotes.scss
@@ -15,7 +15,7 @@
 }
 
 .quote__avatar {
-    border-radius: 50%;
+    // border-radius: 50%;
     overflow:hidden;
     line-height:0;
     width: 8em;
