--- a/src/scss/modules/_moving-picture.scss
+++ b/src/scss/modules/_moving-picture.scss
@@ -1,6 +1,6 @@
-.ratio-box {
-	height: 415px !important;
-}
+// .ratio-box {
+// 	height: 415px !important;
+// }
 
 .moving-picture {
 	position: relative;
