--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -1,4 +1,4 @@
-<div class="flickity  js-rotate-order-carousel  flickity--home">
+<div class="flickity  js-rotate-order-carousel  js-load-on-demand  flickity--home">
 
 {{#each movingPic}}
 
