--- a/src/scss/enhance/_search.scss
+++ b/src/scss/enhance/_search.scss
@@ -1,3 +1,102 @@
+.gs-snippet {
+    padding-left: 8px;
+}
+
+.gsc-cursor-box.gs-bidi-start-align {
+    padding-top: 20px;
+}
+
+.gsc-result {
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
+
+.gsc-selected-option-container.gsc-inline-block {
+    width: 90px !important;
+}
+
+.gsc-tabsArea {
+    margin-bottom: 10px !important;
+    padding-bottom: 29px !important;
+}
+
+.gsc-tabsArea>.gsc-tabHeader {
+    height: 30px !important;
+    width: 70px;
+}
+
+.gsib_a {
+    padding-left: 5px;
+}
+
+div#___gcse_0 {
+    margin-bottom: 50px;
+}
+
+div#gsc-iw-id1 {
+    height: 28px;
+}
+
+div.gs-fileFormat {
+    padding-left: 4px;
+}
+
+.gs-image-box>a>img.gs-image {
+    height: 100%;
+}
+
+input#gsc-i-id1 {
+    box-shadow: none;
+    margin-top: 2px !important;
+}
+
+input.gsc-search-button-v2.gsc-search-button {
+    height: 28px;
+    width: 70px;
+}
+
+span#gs_cb50 {
+    margin-top: 5px;
+}
+
+div#___gcse_0 table td {
+    border: none;
+    padding-top: 0px;
+    padding-bottom: 0px;
+}
+
+div.gsc-cursor-page.gsc-cursor-current-page {
+    text-decoration: none ;
+}
+
+.gsc-tabHeader.gsc-tabhInactive {
+    border-bottom: 1px solid #ccc;
+}
+
+.gsc-refinementsArea {
+    display: none;
+}
+
+.gsc-above-wrapper-area {
+    border-bottom: 1px solid #ccc !important;
+}
+
+form.gsc-search-box.gsc-search-box-tools {
+    display: block !important;
+}
+
+form#cse-search-box {
+    display: none;
+}
+
+.gsc-control-wrapper-cse {
+    visibility: visible !important;
+}
+
+.gsc-tabHeader.gsc-tabhInactive.gsc-inline-block {
+    display: none;
+}
+
 .search {
 	// background: tomato;
 
@@ -39,7 +138,7 @@
 
 	.search-input {
 		// @include border-radius(.3em 0 0 .3em);
-		border-radius: .3em 0 0 .3em;	
+		border-radius: .3em 0 0 .3em;
 		// @include single-box-shadow(#aaa, inset, 0, 0, 7px);
 		// box-shadow: #aaa inset 0 0 7px;
 		// width: 70%;
