--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -50,7 +50,7 @@ layout:default
 	        loadJS("https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.0-beta1/picturefill.min.js");
 	    };
 		loadCSS("/css/boots.css", document.getElementById("loadcss"));
-		loadJS("/js/shorts.js");
+		loadJS("/js/boots.js");
 		// loadCSS("https://cloud.typography.com/6664852/762926/css/fonts.css", document.getElementById("loadcss"));
 	</script>
 
@@ -64,7 +64,15 @@ layout:default
 		webkitRequestAnimationFrame || msRequestAnimationFrame;
 		if (raf) raf(cb);
 		else window.addEventListener('load', cb);
+
+		var cb2 = function() {
+			var m = document.createElement('link'); m.rel = 'stylesheet';
+			m.href = 'https://cloud.typography.com/6664852/762926/css/fonts.css';
+			var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(m, h);
+		};
+		if (raf) raf(cb2);
+		else window.addEventListener('load', cb2);
 	</script>
-	<noscript><link href="https://cdn2.bethel.edu/css/bottom.css" rel="stylesheet" /></noscript>
+	<noscript><link href="https://cdn2.bethel.edu/css/boots.css" rel="stylesheet" /></noscript>
 </body>
 </html>
