--- a/src/scss/modules/_flickity-custom.scss
+++ b/src/scss/modules/_flickity-custom.scss
@@ -17,10 +17,9 @@
     }
 }
 
-
 .flickity {
     margin: auto;
-    background: transparent url(https://cdn4.bethel.edu/images/load.gif) no-repeat center;
+    background: transparent url(https://cdn4.bethel.edu/assets/images/load.gif) no-repeat center;
 }
 
 .flickity.flickity-enabled {
@@ -34,7 +33,7 @@
 }
 
 .is-selected {
-    z-index: 1;
+    z-index: 2;
 }
 
 .flickity--cell {
@@ -59,40 +58,42 @@
     visibility: visible;
 }
 
-// .ratio-box {
-//     position: relative;
-//     height: 0;
-//     display: block;
-// }
-// .ratio-box > * {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     display: block;
-// }
-
-.carousel--image-bank .ratio-box {
-    padding-bottom: 33.2361516%;
+.carousel--text-over-media .ratio-box
+ {
+    position: relative;
+    height: 415px;
+    display: block;
     width: 100%;
+}
+
+.carousel--image-bank .ratio-box
+ {
+    position: relative;
+    display: block;
+    width: 100%;
+}
+
+.carousel--text-over-media .ratio-box > *,
+.carousel--image-bank .ratio-box > *  {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
 .carousel--text-over-media .ratio-box{
     padding-bottom: 50%;
-    width: 100%;
-    height: 415px !important;
 
     @include respond-min(830px){
         padding-bottom: 56.25%;
     }
 }
 
-// .carousel--employee .ratio-box,
-// .carousel--quote .ratio-box {
-//     padding-bottom: 150px;
-// }
-
+.carousel--image-bank .ratio-box {
+    padding-bottom: 33.2361516%;
+}
 
 .lazyload {
     opacity: 0;
