first try on lazy bkg images

--- a/src/scss/modules/_flickity-custom.scss
+++ b/src/scss/modules/_flickity-custom.scss
@@ -19,7 +19,7 @@
 
 .flickity {
     margin: auto;
-    background: transparent url(https://cdn4.bethel.edu/assets/images/load.gif) no-repeat center;
+    background: transparent url(https://cdn4.bethel.edu/images/load.gif) no-repeat center;
 }
 
 .flickity.flickity-enabled {
