--- a/src/scss/modules/_section--home.scss
+++ b/src/scss/modules/_section--home.scss
@@ -52,19 +52,19 @@
 
 
 .section--home__academics {
-	background: url("//cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg");
+	// background: url("https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg");
 	background-size: cover;
 	background-position: center;
 }
 
 .section--home__faith {
-	background: url("//cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg");
+	background: url("https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg");
 	background-size: cover;
 	background-position: center;
 }
 
 .section--home__community {
-	background: url("//cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/group-laughing.jpg");
+	background: url("https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/group-laughing.jpg");
 	background-size: cover;
 	background-position: center;
 }
