--- a/src/scss/enhance/_parallax.scss
+++ b/src/scss/enhance/_parallax.scss
@@ -26,3 +26,45 @@
 .parallax .image__caption {
 	background: $bethel--navy;
 }
+
+
+
+.outerbox {
+    // margin: 10px;
+    // width: 50%;
+}
+
+.lazyloaded.cover.box {
+    background-size: cover;
+}
+.lazyload {
+    /* opacity: 0; */
+}
+.lazyloading {
+    // /* opacity: 1; */
+    // /* transition: 600ms opacity; */
+    background: #f7f7f7 url("//afarkas.github.io/lazysizes/assets/imgs/loader.gif") no-repeat center;
+    min-height: 60px;
+}
+.lazyloaded {
+    /* opacity: 1; */
+    /* transition: 10ms opacity; */
+}
+.ratio-container {
+    position: relative;
+}
+.ratio-container:after {
+    content:'';
+    display: block;
+    height: 0;
+    width: 100%;
+    /* 16:9 = 56.25% = calc(9 / 16 * 100%) */
+    padding-bottom: 100%;
+}
+.ratio-container > * {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
