working on bgset

--- a/src/scss/modules/_section--home.scss
+++ b/src/scss/modules/_section--home.scss
@@ -52,7 +52,7 @@
 
 
 .section--home__academics {
-	// background: url("https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg");
+	background: url("https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg");
 	background-size: cover;
 	background-position: center;
 }
@@ -64,9 +64,9 @@
 }
 
 .section--home__community {
-	background: url("https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/group-laughing.jpg");
+	// background: url("https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/group-laughing.jpg");
 	background-size: cover;
-	background-position: center;
+	background-position: 20% !important;
 }
 
 .section--home__story {
