--- a/src/scss/enhance/_parallax.scss
+++ b/src/scss/enhance/_parallax.scss
@@ -5,7 +5,7 @@
 	background-repeat: no-repeat;
 	background-position: center center;
 
-	@include respond-min(50em){
+	@include respond-min(1025px){
 		background-attachment: fixed;
 	}
 }
