--- a/src/templates/partials/section--home__academics.hbs
+++ b/src/templates/partials/section--home__academics.hbs
@@ -1,5 +1,7 @@
 <div 	class="section--home__holder  section--home__academics  parallax  lazyload"  
-		data-bgset="	https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1600w" data-sizes="auto" > <div class="inner">
+		{{!-- data-bgset="	https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1600w"  --}}
+		data-sizes="auto" > 
+		<div class="inner">
 		<div class="grid">
 			<div class="grid-cell u-medium-1-2">
 				<div class="grid-pad-2x">				
@@ -19,9 +21,24 @@
 	</div>	
 </div>
 
-
-{{!-- <div 
-class="box cover ratio-container lazyload" 
-data-sizes="auto" 
-data-bgset="http://lorempixel.com/800/400/nightlife/1/w800 800w,  http://lorempixel.com/1200/600/nightlife/1/w1200 1200w,  http://lorempixel.com/1600/800/nightlife/1/w1600 1600w,  http://lorempixel.com/1920/960/nightlife/1/w1920/ 1920w"></div>
- --}}
+<div 	class="section--home__holder  section--home__community  parallax lazyload"
+		data-bgset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/group-laughing.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/group-laughing.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/group-laughing.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/group-laughing.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/group-laughing.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/group-laughing.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/group-laughing.jpg 1600w">
+	<div class="inner">
+		<div class="grid">
+			<div class="grid-cell u-medium-1-2">
+				<div class="grid-pad-2x">				
+					<h2 data-bottom-top="opacity: 0;" data-center-center="opacity: 1;">Join a community you’ll call home.</h2>	
+					<div data-bottom-top="opacity: 0;" data-center-center="opacity: 1;">
+                    <p>Our students are gracious servants, compassionate friends, and thoughtful neighbors who are intentional about helping each other grow and having a lot of fun while they're at it.</p>
+					<ul>	
+						<li><a href="//www.bethel.edu/undergrad/student-life/">Student Life at Bethel</a></li>
+						<li><a href="//www.bethel.edu/undergrad/student-life/activities/">Clubs &amp; Organizations</a></li>
+						<li><a href="//www.bethel.edu/undergrad/student-life/activities/sports">Athletics</a></li>
+						<li><a href="//www.bethel.edu/undergrad/student-life/housing-dining/">Housing &amp; Dining</a></li>
+					</ul>
+                    </div>
+				</div>
+			</div>
+		</div>
+	</div>	
+</div>
