--- a/src/scss/enhance/_parallax.scss
+++ b/src/scss/enhance/_parallax.scss
@@ -43,7 +43,7 @@
 .lazyloading {
     // /* opacity: 1; */
     // /* transition: 600ms opacity; */
-    background: #f7f7f7 url("//afarkas.github.io/lazysizes/assets/imgs/loader.gif") no-repeat center;
+    background: #f7f7f7 url("https://cdn4.bethel.edu/images/load.gif") no-repeat center;
     min-height: 60px;
 }
 .lazyloaded {
