--- a/src/templates/partials/section--home__academics.hbs
+++ b/src/templates/partials/section--home__academics.hbs
@@ -1,5 +1,5 @@
 <div 	class="section--home__holder  section--home__academics  parallax  lazyload"  
-		{{!-- data-bgset="	https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1600w"  --}}
+		data-bgset="	https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/chemistry-lab.jpg 1600w" 
 		data-sizes="auto" > 
 		<div class="inner">
 		<div class="grid">
@@ -15,6 +15,28 @@
 							<li><a href="//seminary.bethel.edu/academics/">Seminary programs</a></li>
 						</ul>
                     </div>
+				</div>
+			</div>
+		</div>
+	</div>	
+</div>
+
+<div 	class="section--home__holder  section--home__faith  parallax"
+		data-bgset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/_homepages/www/images/girl-laughing.jpg 1600w">
+
+>
+	<div class="inner">
+		<div class="grid">
+			<div class="grid-cell  u-medium-1-2">
+				<div class="grid-pad-2x">
+					<h2 data-bottom-top="opacity: 0;" data-center-center="opacity: 1;">Live out your faith.</h2>
+					<div data-bottom-top="opacity: 0;" data-center-center="opacity: 1;">
+					<p>We work hard to understand Christ’s message and try our best to spread his love, every day. Here's what it looks like.</p>
+					<ul>
+						<li><a href="//www.bethel.edu/about/faith">Faith at Bethel</a></li>
+						<li><a href="//www.bethel.edu/undergrad/campus-ministries">Worship &amp; Ministry</a></li>
+					</ul>
+					</div>
 				</div>
 			</div>
 		</div>
