--- a/src/scss/modules/_flickity-custom.scss
+++ b/src/scss/modules/_flickity-custom.scss
@@ -19,7 +19,13 @@
 
 .flickity {
     margin: auto;
-    background: transparent url(https://cdn4.bethel.edu/images/load.gif) no-repeat center;
+    background: transparent url(https://www.bethel.edu/cdn/images/load.gif) no-repeat center;
+}
+
+.flickity-viewport {
+    @include respond-min(830px){
+        max-height: 75vh;
+    }
 }
 
 .flickity.flickity-enabled {
@@ -81,6 +87,10 @@
     width: 100%;
     height: 100%;
     display: block;
+
+    @include respond-min(830px){
+        max-height: 75vh;
+    }
 }
 
 .carousel--text-over-media .ratio-box{
@@ -117,7 +127,7 @@ Styles for the big carousel on bethel.edu
 
 .flickity--home {
     height: 415px;
-    max-height: 80vh;
+    // max-height: 80vh;
 
     @include respond-min(830px){
         height: 100%;
@@ -128,10 +138,6 @@ Styles for the big carousel on bethel.edu
         @include respond-max(829px){
            height: 100% !important;
        }
-   }
-
-   .flickity--cell {
-        // background: transparent url(../assets/images/load.gif) no-repeat center;
    }
 }
 
