adding justify-content: center to .grid--center

--- a/src/scss/grid/_flex-grid.scss
+++ b/src/scss/grid/_flex-grid.scss
@@ -137,6 +137,7 @@ $add-legacy-support: false !default;
 
 .grid--center {
     align-items: center;
+    justify-content: center;
 }
 
 .grid--bottom {
