--- a/src/templates/pages/index.hbs
+++ b/src/templates/pages/index.hbs
@@ -5,15 +5,15 @@ layout: default
 
 <div class="main js-animate">
 
-    {{> proof-points }}
+    {{!-- {{> proof-points }} --}}
 
-    {{> collapsible }}
-    <img src="//fillmurray.com/800/350">   
+    {{!-- {{> collapsible }} --}}
+    {{!-- <img src="//fillmurray.com/800/350">    --}}
 
 
     <section class="grid-section">
     <div class="grid">
-        <div class="grid-cell u-medium-1-2">
+        <div class="grid-cell u-medium-1-2  pr4@medium">
             <div class="medium-grid-pad-1x">{{> news }}</div>
         </div>
         <div class="grid-cell">
