--- a/src/scss/typography/_typography.scss
+++ b/src/scss/typography/_typography.scss
@@ -79,9 +79,9 @@ a:hover {
 
 .teaser {
   font-family: $gotham;
-  font-size: 1.2em;
-  color: #C5A144;
+  color: #0069aa;
   font-weight: 400;
+  line-height: 1.4;
 }
 
 .unstyled {
