--- a/src/scss/typography/_typography.scss
+++ b/src/scss/typography/_typography.scss
@@ -1,8 +1,8 @@
 body {
   line-height: 1.5;
   color: #555;
+    font-family: georgia, serif;
 }
-
 
 h1, h2, h3, h4 {
   margin: 1.414em 0 0.5em;
@@ -10,24 +10,19 @@ h1, h2, h3, h4 {
   line-height: 1.2;
 }
 
-h1 {font-size: 1.602em;}
-h2 {font-size: 1.424em;}
-h3 {font-size: 1.266em;}
-h4 {font-size: 1.125em;}
+h1, .h1 {font-size: 1.602em;}
+h2, .h2 {font-size: 1.424em;}
+h3, .h3 {font-size: 1.266em;}
+h4, .h4 {font-size: 1.125em;}
 
 h1 + p,
 h2 + p,
 h3 + p,
 h4 + p {
-	margin-top: 0;
+  margin-top: 0;
 }
 
 small, .font_small {font-size: 0.889em;}
-
-
-body {
-	font-family: georgia, serif;
-}
 
 h1, .h1,
 h2, .h2,
@@ -51,8 +46,8 @@ p:first-child {
 	margin-top: 0;
 }
 
-p {
-	
+p, li {
+	// font-size: 1.1rem;
 }
 
 a {
